--- a/lpm.rc
+++ b/lpm.rc
@@ -23,7 +23,7 @@ on init
 
 on fs
     mount tmpfs tmpfs /tmp
-    mount yaffs2 mtd@system /system
+    mount yaffs2 mtd@factoryfs /system
 on boot
 
     ifup lo
