--- a/recovery.rc
+++ b/recovery.rc
@@ -1,40 +1,45 @@
-import init.ypg1.gps.rc
-import init.ypg1.usb.rc
+import /usb.rc
 
 on early-init
     start ueventd
 
 on init
     export PATH /sbin:/vendor/bin:/system/sbin:/system/bin:/system/xbin
-    export LD_LIBRARY_PATH /vendor/lib:/system/lib:/system/lib/egl
+    export LD_LIBRARY_PATH /vendor/lib:/system/lib
     export ANDROID_ROOT /system
     export ANDROID_DATA /data
     export EXTERNAL_STORAGE /sdcard
-    export TMPDIR /data/local/tmp
+    export SECONDARY_STORAGE /emmc
 
-    symlink /system/etc /etc
+# symlink /misc to /etc for recovery
+    symlink /misc /etc
 
-    mkdir /sdcard
-    mkdir /preload
     mkdir /system
-    mkdir /data 0771 system system
+    mkdir /data
     mkdir /cache
     mkdir /tmp
-    mkdir /dbdata
-
+    mkdir /efs
     mkdir /mnt 0775 root root
-    mkdir /tmp
 
-    mkdir /data/fota 0771 system system    
-    mkdir /preinstall 0771 system system    
+# create mountpoints
+    mkdir /sdcard 0000 system system
+    mkdir /emmc 0000 system system
+
+# for emergencyboot
+    symlink /sdcard /mnt/sdcard
 
     # This may have been created by the recovery system with odd permissions
     chown system system /cache/recovery
     chmod 0770 /cache/recovery
 
 on early-fs
-    mount tmpfs nodev /tmp
 
+on fs
+    mount tmpfs tmpfs /tmp
+    mount yaffs2 mtd@factoryfs /system
+    mount yaffs2 mtd@cache /cache
+    mount ext4 /dev/block/mmcblk0p2 /data
+    mount yaffs2 mtd@dbdatafs /datadata
 
 on post-fs
 
@@ -45,7 +50,7 @@ on post-fs
     write /proc/sys/kernel/sched_wakeup_granularity_ns 2000000
     write /proc/sys/kernel/sched_compat_yield 1
     write /proc/sys/kernel/sched_child_runs_first 0
-	
+
 on boot
 
     ifup lo
@@ -58,14 +63,29 @@ service ueventd /sbin/ueventd
     critical
 
 service console /sbin/sh
+    class core
     console
+    disabled
+    group log
+
+on property:ro.secure=0
+    start console
 
 service recovery /sbin/recovery
-    console
-    oneshot
 
-service adbd /sbin/adbd recovery
+# adbd is controlled by the persist.service.adb.enable system property
+service adbd /sbin/adbd
     disabled
+
+# Always start adbd on userdebug and eng builds
+# In recovery, always run adbd as root.
+on property:ro.debuggable=1
+    setprop sys.usb.config mass_storage,adb
+    setprop service.adb.root 1
+
+# Restart adbd so it can run as root
+on property:service.adb.root=1
+    restart adbd
 
 on property:persist.service.adb.enable=1
     start adbd
