--- a/ueventd.smdkc110.rc
+++ b/ueventd.smdkc110.rc
@@ -9,7 +9,7 @@
 /dev/video22              0660   system     system
 /dev/s3c-jpg              0660   system     camera
 /dev/s3c-mem              0660   system     system
-/dev/s3c-mfc              0660   system     graphics
+/dev/s3c-mfc              0660   media      media
 
 # for copybit
 /dev/pmem_gpu1            0660   system     graphics
@@ -31,7 +31,7 @@
 /dev/s3c2410_serial1      0600   gps        gps
 
 #for vibrator
-/dev/tspdrv		  0660	 shell	    shell
+/dev/tspdrv		  0660	 system	    system
 
 #for PMEM_adsp
 /dev/pmem_adsp		  0660	 system	    audio 
