Update touchscreen driver insmod path.

--- a/init.smdkc110.rc
+++ b/init.smdkc110.rc
@@ -32,7 +32,7 @@ on fs
     chmod 770 /efs/imei
 
 # insmod the touchscreen driver
-    insmod  /lib/modules/qt602240.ko
+    insmod  /system/lib/modules/qt602240.ko
 
 # insmod the kernel modules
     insmod /system/lib/modules/Si4709_driver.ko
