--- a/init.smdkc110.rc
+++ b/init.smdkc110.rc
@@ -19,14 +19,14 @@ on init
     stop ril-daemon
 
 on fs
-    mount yaffs2 mtd@factoryfs /system
+    mount yaffs2 mtd@system /system
     mount ext4 /dev/block/mmcblk0p2 /data wait nosuid nodev noatime nodiratime noauto_da_alloc
     mount yaffs2 mtd@cache /cache
     mount yaffs2 mtd@dbdatafs /datadata
 
 # We chown/chmod /efs because mount is run as root + defaults
     mkdir /efs 0775 radio radio
-    mount yaffs2 /dev/block/mtdblock0 /efs
+    mount yaffs2 /dev/block/mtdblock4 /efs
     chown radio radio /efs
     chmod 770 /efs/bluetooth
     chmod 770 /efs/imei
