--- a/init.smdkc110.rc
+++ b/init.smdkc110.rc
@@ -39,6 +39,7 @@ on fs
 
 # Permissions for System Server and daemons.
     chown system system /sys/class/backlight/s5p_bl/brightness
+    chown system system /sys/devices/virtual/sec/ts/touchkey_led
 
 # change permission for uart_switch
     chown radio radio /sys/class/sec/uart_switch/UART_SEL/value
