--- a/init.smdkc110.rc
+++ b/init.smdkc110.rc
@@ -186,4 +186,16 @@ service bugreport /system/bin/dumpstate -d -v -o /sdcard/bugreports/bugreport
 #     user system
 #     group graphics
 
+#- End main Services -#
+#- Begin late_start Services-#
+service orientationd /system/bin/orientationd
+  class late_start
+  user compass
+  group system input
+
+service geomagneticd /system/bin/geomagneticd
+  class late_start
+  user compass
+  group system input
+
 	 
