--- a/init.smdkc110.rc
+++ b/init.smdkc110.rc
@@ -130,6 +130,10 @@ service ypg1-ril-daemon /system/bin/rild
     group radio cache inet misc audio sdcard_rw log
 
 
+service dmb /system/bin/dmbserver
+    user system
+    group system audio camera graphics inet net_bt net_bt_admin net_raw sdcard_rw 
+
 service dhcpcd_eth0 /system/bin/dhcpcd -BKA
     disabled
     oneshot
