--- a/init.smdkc110.gps.rc
+++ b/init.smdkc110.gps.rc
@@ -5,14 +5,14 @@
 #
 
 service gpsd /system/vendor/bin/gpsd -c /vendor/etc/gps.xml
-    class late_start
+    class main
     socket gps seqpacket 0660 gps system
-    user gps
+    user gps system
     group system inet
 
 on post-fs-data
     # create data/gps for GPS demon
-    mkdir /data/gps 700 gps system
+    mkdir /data/gps 770 gps system
     chown gps system /data/gps
     chown gps root /sys/class/sec/gps/GPS_PWR_EN/value
     chmod 660 /sys/class/sec/gps/GPS_PWR_EN/value
