Transition to aries machine name.
Requires corresponding kernel change.

--- a/init.aries.rc
+++ b/init.aries.rc
@@ -1,5 +1,5 @@
-import init.smdkc110.usb.rc
-import init.smdkc110.gps.rc
+import init.aries.usb.rc
+import init.aries.gps.rc
 
 on init
     loglevel 9
