Only start orientationd when enabled.

--- a/init.aries.rc
+++ b/init.aries.rc
@@ -235,6 +235,7 @@ service orientationd /system/bin/orientationd
   class main
   user compass
   group system input
+  disabled
 
 service geomagneticd /system/bin/geomagneticd
   class main
