--- a/init.aries.rc
+++ b/init.aries.rc
@@ -166,11 +166,24 @@ service dmb /system/bin/dmbserver
     user system
     group system audio camera graphics inet net_bt net_bt_admin net_raw sdcard_rw 
 
-service dhcpcd_eth0 /system/bin/dhcpcd -BKA
+service wpa_supplicant /system/bin/wpa_supplicant \
+	-iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
+	#   we will start as root and wpa_supplicant will switch to user wifi
+	#   after setting up the capabilities required for WEXT
+	#   user wifi
+	#   group wifi inet keystore
+	class main
+	socket wpa_wlan0 dgram 660 wifi wifi
+	disabled
+	oneshot
+
+service dhcpcd_wlan0 /system/bin/dhcpcd -aABKL
+    class main
     disabled
     oneshot
 
-service iprenew_eth0 /system/bin/dhcpcd -n
+service iprenew_wlan0 /system/bin/dhcpcd -n
+    class main
     disabled
     oneshot
 
@@ -179,12 +192,6 @@ on property:init.svc.bootanim=running
 
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd_eth0
-
-service wpa_supplicant /system/bin/wpa_supplicant -Dwext -ieth0 -c/data/misc/wifi/wpa_supplicant.conf
-    socket wpa_eth0 dgram 0660 wifi wifi
-    group system wifi inet
-    disabled
-    oneshot
 
 service btld /system/bin/logwrapper /system/bin/btld -hb 3000000 -hp /dev/s3c2410_serial0 -lpm 1
     user root
