Extra BT changes.
Change-Id: I26c2b00d023fbec6df8b183c947eaed037aa7c5f

--- a/init.aries.rc
+++ b/init.aries.rc
@@ -187,8 +187,11 @@ service iprenew_wlan0 /system/bin/dhcpcd -n
     disabled
     oneshot
 
-on property:init.svc.bootanim=running
-    start bdaddr
+# for Broadcom Bluetooth
+service iprenew_bnep0 /system/bin/dhcpcd -n
+    class main
+    disabled
+    oneshot
 
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd_eth0
