--- a/lpm.rc
+++ b/lpm.rc
@@ -2,59 +2,18 @@ on early-init
     start ueventd
 
 on init
-    export PATH /sbin:/vendor/bin:/system/sbin:/system/bin:/system/xbin
-    export LD_LIBRARY_PATH /vendor/lib:/system/lib
-    export ANDROID_ROOT /system
-    export ANDROID_DATA /data
-    export EXTERNAL_STORAGE /sdcard
 
-    symlink /system/etc /etc
+sysclktz 0
 
-    mkdir /sdcard
-    mkdir /preload
-    mkdir /system
-    mkdir /data
-    mkdir /cache
-    mkdir /efs
-    mkdir /tmp
-
-    mkdir /mnt 0775 root root
-
-on fs
-    mount tmpfs tmpfs /tmp
-    mount yaffs2 mtd@system /system
 on boot
-
-    ifup lo
-    hostname localhost
-    domainname localdomain
+    # set cpu governor to powersave while in charging mode
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
 
     class_start default
 
+## Daemon processes to be run by init.
+##
 service ueventd /sbin/ueventd
     critical
 
-service console /system/bin/sh
-    console
-
-# adbd is controlled by the persist.service.adb.enable system property
-service adbd /sbin/adbd
-    disabled
-
-service playlpm /system/bin/playlpm
-    user root
-    oneshot
-
-service immvibed /system/bin/immvibed 
-    oneshot
-
-service lpmkey /system/bin/charging_mode
-    user root
-    oneshot
-
-on property:persist.service.adb.enable=1
-    start adbd
-
-on property:persist.service.adb.enable=0
-    stop adbd
-
+service battery_charger /charger
