--- a/init.aries.rc
+++ b/init.aries.rc
@@ -120,21 +120,11 @@ on boot
 
 
 # permissions for bluetooth.
-    chown bluetooth bluetooth ro.bt.bdaddr_path
     chown bluetooth bluetooth /dev/s3c2410_serial0
-    chmod 0660 /dev/s3c2410_serial0
+    chmod 0600 /dev/s3c2410_serial0
     chmod 0660 /sys/class/rfkill/rfkill0/state
-    chmod 0660 /sys/class/rfkill/rfkill1/state
-    chmod 0660 /sys/class/rfkill/rfkill2/state
-    chmod 0660 /sys/class/rfkill/rfkill3/state
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill1/state
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill2/state
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill3/state
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill1/type
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill2/type
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill3/type
 
 # We chown/chmod /efs because mount is run as root + defaults
     #SEC Device encryption   
@@ -213,8 +203,8 @@ on property:service.brcm.bt.soft_onoff=1
 on property:service.brcm.bt.soft_onoff=0
     stop btld
 
-service hciattach /system/bin/brcm_patchram_plus -d --enable_hci --baudrate 3000000 \
-    --patchram /system/bin/BCM4329B1_002.002.023.0589.0636.hcd /dev/s3c2410_serial0
+service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm \
+    --baudrate 3000000 --patchram /vendor/firmware/bcm4329.hcd /dev/s3c2410_serial0
     class main
     user bluetooth
     group bluetooth net_bt_admin
