--- a/init.aries.rc
+++ b/init.aries.rc
@@ -92,6 +92,10 @@ on post-fs-data
     chown radio radio /sys/class/mdnieset_ui/switch_mdnieset_ui/mdnieset_ui_file_cmd
     chown radio radio /sys/class/mdnieset_outdoor/switch_mdnieset_outdoor/mdnieset_outdoor_file_cmd
 
+    chown root system /sys/devices/virtual/misc/pwm_duty/pwm_duty
+    chmod 0664 /sys/devices/virtual/misc/pwm_duty/pwm_duty
+    restorecon /sys/devices/virtual/misc/pwm_duty/pwm_duty
+
 on boot
 
     mount debugfs /sys/kernel/debug /sys/kernel/debug
@@ -161,7 +165,7 @@ service wpa_supplicant /system/bin/wpa_supplicant \
 	#   user wifi
 	#   group wifi inet keystore
 	class main
-	socket wpa_wlan0 dgram 660 wifi wifi
+	socket wpa_wlan0 dgram 660 wifi wifi u:object_r:wpa_socket:s0
 	disabled
 	oneshot
 
