--- a/init.recovery.aries.rc
+++ b/init.recovery.aries.rc
@@ -1,10 +1,12 @@
-import usb.rc # Renamed init.p1.usb.rc, we can't use init*.rc because the build script will delete it
-
-on boot
-    # mass_storage support
-    setprop sys.usb.config mass_storage,adb
+import usb.rc # Renamed init.aries.usb.rc, we can't use init*.rc because the build script will delete it
 
 on init
     # legacy symlink
     rmdir /external_sd
     symlink /storage/sdcard1 /external_sd
+
+on boot
+    write /dev/graphics/fb3 1
+
+    # mass_storage support
+    setprop sys.usb.config mass_storage,adb
