Initial logical volumes (LVM) As well as encryption support.
- Support for logical volumes so we can get access to a larger /system
partition by taking space from /data (mmcblk0p2) /system initial size is
600MB and can get easily upgradable by tweaking the updater.sh

- Adding support as well for encryption. Depending when data/data is encrypted
or not, the contents of it goes either on data/data or on the /datadata
partition.

- Updated the updater.sh from aries to take care of the LVM handling.

Initially made for Aries devices, adapted over for YP-G1.

--- a/init.aries.gps.rc
+++ b/init.aries.gps.rc
@@ -5,9 +5,9 @@
 #
 
 service gpsd /system/vendor/bin/gpsd -c /vendor/etc/gps.xml
-    class main
+    class late_start
     socket gps seqpacket 0660 gps system
-    user gps system
+    user gps
     group system inet
 
 on post-fs-data
