--- a/init.aries.rc
+++ b/init.aries.rc
@@ -6,6 +6,9 @@ on init
     export EXTERNAL_STORAGE /storage/sdcard0
     export SECONDARY_STORAGE /storage/sdcard1
 
+# FIXME: Market checks this variable for space-checking, but downloads to /datadata
+    export DOWNLOAD_CACHE /data/download
+
     mkdir /mnt/media_rw/sdcard0 0700 media_rw media_rw
     mkdir /mnt/media_rw/sdcard1 0700 media_rw media_rw
     mkdir /storage/sdcard0 0700 root root
@@ -14,14 +17,19 @@ on init
     symlink /storage/sdcard0 /mnt/sdcard
     symlink /storage/sdcard1 /emmc
     symlink /storage/sdcard1 /mnt/emmc
+    mkdir /datadata 0771 system system
 
     # We will create our own ril-daemon service in class 'core' because the
     # rild doesn't like being killed. (During device encryption.)
     stop ril-daemon
 
 on fs
-    mount yaffs2 mtd@system /system
+# LVM: set up LVM volumes
+    exec /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
+    exec /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
+
     mount yaffs2 mtd@cache /cache
+    mount yaffs2 mtd@datadata /datadata
     mount_all /fstab.aries
 
 # We chown/chmod /efs because mount is run as root + defaults
@@ -44,6 +52,11 @@ on fs
 
 on post-fs
 
+# datadata permissions
+    chown system system /datadata
+    chmod 0771 /datadata
+    restorecon /datadata
+
 # allow system to modify cpufreq control files
   chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
   chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
@@ -55,6 +68,12 @@ on post-fs
   chmod 0664 /sys/devices/system/cpu/cpufreq/ondemand/boostpulse
 
 on post-fs-data
+
+   # for migrating download provider's cache out of the small /data/data
+   mkdir /data/data2 0771 system system
+
+   # setup datadata
+   exec /sbin/setupdatadata.sh
 
   # For sensor control
   chown system input /sys/class/input/input0/enable
@@ -225,13 +244,13 @@ service bugreport /system/bin/dumpstate -d -v -o /sdcard/bugreports/bugreport
 #     group graphics
 
 service orientationd /system/bin/orientationd
-  class main
+  class late_start
   user compass
   group system input
   disabled
 
 service geomagneticd /system/bin/geomagneticd
-  class main
+  class late_start
   user compass
   group system input
 
