Fix device encryption
LVM /dev/mapper/* devices need to be manually labelled

Change-Id: I6e6c765890974c33fe841007764dfe97078811df

--- a/init.aries.rc
+++ b/init.aries.rc
@@ -27,6 +27,8 @@ on fs
 # LVM: set up LVM volumes
     exec /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
     exec /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
+    restorecon /dev/mapper/lvpool-system
+    restorecon /dev/mapper/lvpool-userdata
 
     mount yaffs2 mtd@cache /cache
     mount yaffs2 mtd@datadata /datadata
