Use KitKat zRAM setting
CM's compcache has been removed, so we need to migrate to KitKat's
mechanism. The value is set to 128 MB for now. It may provide benefits
to multitasking.

Change-Id: Ib780aed8c336cea5baf0f672e41179ef85790061

--- a/init.aries.rc
+++ b/init.aries.rc
@@ -33,6 +33,7 @@ on fs
     mount yaffs2 mtd@cache /cache
     mount yaffs2 mtd@datadata /datadata
     mount_all /fstab.aries
+    swapon_all fstab.aries
 
 # We chown/chmod /efs because mount is run as root + defaults
     mkdir /efs 0775 radio radio
