Init: Mount bcmdhd module

--- a/init.aries.rc
+++ b/init.aries.rc
@@ -45,6 +45,9 @@ on fs
 # insmod the touchscreen driver
     insmod  /system/lib/modules/qt602240.ko
 
+# insmod the wifi driver
+    insmod  /system/lib/modules/bcmdhd.ko
+
 # Permissions for System Server and daemons.
     chown system system /sys/class/backlight/s5p_bl/brightness
     chown system system /sys/devices/virtual/sec/ts/touchkey_led
