--- a/init.aries.rc
+++ b/init.aries.rc
@@ -68,6 +68,9 @@ on post-fs
   chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
   chown root system /sys/devices/system/cpu/cpufreq/ondemand/boostpulse
   chmod 0664 /sys/devices/system/cpu/cpufreq/ondemand/boostpulse
+
+  # zRAM: only read one page at a time
+    write /proc/sys/vm/page-cluster 0
   
 on post-fs-data
 
