Init: Mount qt602240 touchscreen driver at recovery boot

--- a/init.recovery.aries.rc
+++ b/init.recovery.aries.rc
@@ -9,6 +9,13 @@ on fs
 # set up LVM volumes
     exec /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
     exec /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
+	
+    # mount /system partition
+    mount ext4 /dev/lvpool/system /system
+
+on post-fs
+    # mount touchscreen driver
+    insmod /system/lib/modules/qt602240.ko
 
 on boot
     write /dev/graphics/fb3 1
