--- a/AriesParts/AndroidManifest.xml
+++ b/AriesParts/AndroidManifest.xml
@@ -5,7 +5,7 @@
    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
    <application android:label="@string/app_name"
-                android:icon="@drawable/icon">
+                android:icon="@mipmap/ic_launcher_settings">
       <activity android:name=".DeviceSettings"
                 android:label="@string/app_name">
       </activity>
